compiles on NCS 1.9.1

--- a/west.yml
+++ b/west.yml
@@ -1,3 +1,13 @@
 manifest:
+  remotes:
+    - name: nrfconnect
+      url-base: https://github.com/nrfconnect
+  projects:
+    - name: nrf
+      repo-path: sdk-nrf
+      remote: nrfconnect
+      revision: v2.0.0
+      import: true
   self:
+    # This repository should be cloned to 
     path: as5048
