--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "nrf-connect.applications": [
-        "${workspaceFolder}"
+        "${workspaceFolder}",
+        "${workspaceFolder}\\example"
     ],
     "nrf-connect.topdir": "${nrf-connect.sdk:2.0.0}",
-    "nrf-connect.toolchain.path": "PATH",
+    "nrf-connect.toolchain.path": "${nrf-connect.toolchain:1.9.1}",
     "files.associations": {
         "as5048a.h": "c",
         "spi.h": "c",
