--- a/west.yml
+++ b/west.yml
@@ -1,13 +1,13 @@
 manifest:
-  self:
-    path: app-zephyr
-
   remotes:
-    - name: zephyrproject-rtos
-      url-base: https://github.com/zephyrproject-rtos
-
+    - name: nrfconnect
+      url-base: https://github.com/nrfconnect
   projects:
-    - name: zephyr
-      remote: zephyrproject-rtos
-      revision: zephyr-v3.1.0
+    - name: nrf
+      repo-path: sdk-nrf
+      remote: nrfconnect
+      revision: v2.0.0
       import: true
+  self:
+    # This repository should be cloned to 
+    path: as5048
